--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,7 +7,8 @@
   line-height: 1;
   font-weight: 400;
   gap: 20px;
-  padding-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 60px;
   padding-left: 0;
   width: 100%;
   display: flex;
