--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -140,7 +140,7 @@
 
   .profile__column {
     align-items: center;
-    margin: 0 0 32px;
+    margin: 0 0 20px;
     margin-right: 0;
   }
 
